(general) Fix width of subtle-container headers on mobile
Closes #1643

--- a/astrobin/static/astrobin/scss/astrobin-mobile.scss
+++ b/astrobin/static/astrobin/scss/astrobin-mobile.scss
@@ -233,6 +233,10 @@
     padding: 0 4px;
   }
 
+  .subtle-container .header {
+    width: calc(100% - 12px);
+  }
+
   .subtle-container, .subtle-container .header, .subnav,
   footer .container {
     -webkit-border-radius: 0;
